@startuml savePackageClassDiagram

package Save{
class SaveGame {
-mFileName : string
    + SaveGame(const string &aFileName)
    + store() : void
    + remove() : void

    + addIntField(const string& aName, int aValue) : void
    + addFloatField(const string& aName, float aValue) : void
    + addStringField(const string& aName, const string& aValue) : void

    + setIntField(const string& aName, int aValue) : void
    + setFloatField(const string& aName, float aValue) : void
    + setStringField(const string& aName, const string& aValue) : void

    + hasIntField(const string& aName) : bool
    + hasFloatField(const string& aName) : bool
    + hasStringField(const string& aName) : bool

    + getIntField(const string& aName) : const IntSaveField&
    + getFloatField(const string& aName) : const FloatSaveField&
    + getStringField(const string& aName) : const StringSaveField&

    + addArray(const string& aName) : void
    + setArray(const string& aName, const SaveArray& aValue) : void
    + getArray(const string& aName) const : SaveArray

    - addAny(const string &aName, string aValue) : void
    - createFile() : void
}

class SaveArray {
    - mName : string
    + SaveArray(const string &aName)

    + getName() : string

    - addAny(const string &aName, string aValue) : void

    + getIntField(string aName) : IntSaveField&
    + getFloatField(string aName) : FloatSaveField&
    + getStringField(string aName) : StringSaveField&

    + getIntArray() : const vector&
    + getFloatArray() : const vector&
    + getStringArray() : const vector&

    + getSizeIntArray() : unsigned
    + getSizeFloatArray() : unsigned
    + getSizeStringArray() : unsigned
}



class SaveGameUtil {
  + isInteger(string aValue) : static bool
  + isFloat(string aValue) : static bool
}

together {
class IntSaveField {
  - mName : string
  - mValue : int

  + IntSaveField(string aName)

  + getName() : string

  + setValue(int) : void
  + getValue() : int
}

class FloatSaveField {
  - mName : string
  - mValue : float

  + FloatSaveField(string aName)

  + getName() : string

  + setValue(float) : void
  + getValue() : float
}

class StringSaveField {
  - mName : string
  - mValue : string

  + StringSaveField(string aName)

  + getName() : string

  + setValue(string) : void
  + getValue() : string
}
}

SaveGame *-- "*" SaveArray

SaveGame <-left- SaveGameUtil
SaveGame -[hidden]> SaveArray
SaveGame *--"*" IntSaveField
SaveGame *--"*" FloatSaveField
SaveGame *--"*" StringSaveField

SaveArray <-up- SaveGameUtil
SaveArray *--"*" IntSaveField
SaveArray *--"*" FloatSaveField
SaveArray *--"*" StringSaveField
}

Save *-- "*" SaveGame
@enduml